# cython_bbox

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  setup.py
cython_bbox/: __init__.py
src/: cython_bbox.c  cython_bbox.pyx
